--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
           alt="website-logo"
         />
       </div>
-      <ul class="menu">
+      <ul class="menu active ">
         <li class="menu-link">Home</li>
         <li class="menu-link">Projects</li>
         <li class="menu-link">About</li>
         <li class="menu-link">Contact</li>
       </ul>
-      <button class="burger">
+      <button class="burger active">
         <span></span>
         <span></span>
         <span></span>
