--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
       </button>
     </header>
 
+    <!-- Section -->
+
+    <section id="home" class="home">
+      <img src="images/LandingHero.gif" class="home-img" alt="">
+      <div class="home-content">
+        <h1>Adam Huras</h1>
+        <span>Frontend Developer</span>
+      </div>
+      <div class="home-icons">
+        <img src="images/icons/linkedin.svg" alt="linkedin-icon">
+        <img src="images/icons/GithubIcon.svg" alt="github-icon">
+      </div>
+    </section>
+
     <script src="js/main.js"></script>
   </body>
 </html>
