--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
         <span>Frontend Developer</span>
       </div>
       <div class="home-icons">
-        <img src="images/icons/linkedin.svg" alt="linkedin-icon">
+       
         <img src="images/icons/GithubIcon.svg" alt="github-icon">
       </div>
+      <button class="scroll-down-button">
+        <div class="scroll-down-circle"></div>
+      </button>
     </section>
 
     <script src="js/main.js"></script>
