--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- Header -->
     <header>
-      <div class="logo ">
+      <div class="logo">
         <img
           src="images/vecteezy_ah-logo-monogram-with-pentagon-shape-style-design-template_.jpg"
           alt="website-logo"
@@ -22,7 +22,7 @@
         <li class="menu-link">About</li>
         <li class="menu-link">Contact</li>
       </ul>
-      <button class="burger ">
+      <button class="burger">
         <span></span>
         <span></span>
         <span></span>
@@ -32,15 +32,15 @@
     <!-- Section -->
 
     <section id="home" class="home">
-      <img src="images/LandingHero.gif" class="home-img" alt="">
+      <img src="images/LandingHero.gif" class="home-img" alt="" />
       <div class="home-content">
         <h1>Adam Huras</h1>
         <span>Frontend Developer</span>
+        <div class="home-icons">
+          <img src="images/icons/GithubIcon.svg" alt="github-icon" />
+        </div>
       </div>
-      <div class="home-icons">
-       
-        <img src="images/icons/GithubIcon.svg" alt="github-icon">
-      </div>
+
       <button class="scroll-down-button">
         <div class="scroll-down-circle"></div>
       </button>
