--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
       </button>
     </section>
 
+    <main class="projects">
+      <div class="section-title">
+        <p class="section-title-main">My</p>
+        <span class="section-title-sub">Projects</span>
+      </div>
+
+      </section>
+    </main>
+
     <script src="js/main.js"></script>
   </body>
 </html>
