--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
         <span class="section-title-sub">Projects</span>
       </div>
 
-      </section>
+<div class="projects-content">
+  <div class="project-content-card">
+<img src="images/projects/first-project.svg" alt="">
+<div class="project-card-info"></div>
+  </div>
+</div>
     </main>
 
     <script src="js/main.js"></script>
