--- a/index.html
+++ b/index.html
@@ -55,8 +55,26 @@
 <div class="projects-content">
   <div class="project-content-card">
 <img src="images/projects/first-project.svg" alt="">
-<div class="project-card-info"></div>
+<div class="project-card-info">
+  <p class="project-name">First project</p>
+  <a class="project-link" href="/">
+    <img src="images/icons/code.svg" alt="">
+  </a>
+
+</div>
+<p class="project-description">
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quisquam ratione quae enim iusto optio similique odit, autem eaque ipsam.
+</p>
+<div class="project-technologies">
+  <p class="technologies-title">Technologies used</p>
+  <div class="technologies-used-icons">
+    <img src="images/icons/vue-svgrepo-com.svg" alt="">
+    <img src="images/icons/laravel-svgrepo-com.svg" alt="">
+    <img src="images/icons/typescript-svgrepo-com.svg" alt="">
   </div>
+</div>
+  </div>
+  
 </div>
     </main>
 
