--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <div class="project-card-info">
   <p class="project-name">First project</p>
   <a class="project-link" href="/">
-    <img src="images/icons/code.svg" alt="">
+    <img src="images/icons/code.svg" alt="code-icon">
   </a>
 
 </div>
