--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <div class="project-content-card">
     <img src="images/projects/second-project.svg" alt="">
     <div class="project-card-info">
-      <p class="project-name">First project</p>
+      <p class="project-name">Second project</p>
       <a class="project-link" href="/">
         <img src="images/icons/code.svg" alt="">
       </a>
@@ -99,7 +99,7 @@
       <div class="project-content-card">
         <img src="images/projects/third-project.svg" alt="">
         <div class="project-card-info">
-          <p class="project-name">First project</p>
+          <p class="project-name">Third project</p>
           <a class="project-link" href="/">
             <img src="images/icons/code.svg" alt="">
           </a>
@@ -121,7 +121,7 @@
   <div class="project-content-card">
     <img src="images/projects/fourth-project.svg" alt="">
     <div class="project-card-info">
-      <p class="project-name">First project</p>
+      <p class="project-name">Fourth project</p>
       <a class="project-link" href="/">
         <img src="images/icons/code.svg" alt="">
       </a>
