--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
           alt="website-logo"
         />
       </div>
-      <ul class="menu">
+      <ul class="menu active">
         <li class="menu-link">Home</li>
         <li class="menu-link">Projects</li>
         <li class="menu-link">About</li>
         <li class="menu-link">Contact</li>
       </ul>
-      <button class="burger">
+      <button class="burger active">
         <span></span>
         <span></span>
         <span></span>
@@ -37,6 +37,8 @@
         <h1>Adam Huras</h1>
         <span>Frontend Developer</span>
         <div class="home-icons">
+
+          
           <img src="images/icons/GithubIcon.svg" alt="github-icon" />
         </div>
       </div>
@@ -45,13 +47,14 @@
         <div class="scroll-down-circle"></div>
       </button>
     </section>
+<!-- Projects -->
 
     <main class="projects">
       <div class="section-title">
         <p class="section-title-main">My</p>
         <span class="section-title-sub">Projects</span>
       </div>
-
+<!-- 1st project -->
 <div class="projects-content">
   <div class="project-content-card">
 <img src="images/projects/first-project.svg" alt="">
@@ -74,6 +77,7 @@
   </div>
 </div>
   </div>
+  <!-- 2nd Project -->
   <div class="project-content-card">
     <img src="images/projects/second-project.svg" alt="">
     <div class="project-card-info">
@@ -91,11 +95,12 @@
       <div class="technologies-used-icons">
         <img src="images/icons/vue-svgrepo-com.svg" alt="">
         <img src="images/icons/laravel-svgrepo-com.svg" alt="">
-        <img src="images/icons/typescript-svgrepo-com.svg" alt="">
+        <img src="images/icons/javascript-svgrepo-com.svg" alt="">
+        <img src="images/icons/sass.svg" alt="">
       </div>
     </div>
       </div>
-
+<!-- 3rd Project -->
       <div class="project-content-card">
         <img src="images/projects/third-project.svg" alt="">
         <div class="project-card-info">
@@ -111,13 +116,13 @@
         <div class="project-technologies">
           <p class="technologies-title">Technologies used</p>
           <div class="technologies-used-icons">
-            <img src="images/icons/vue-svgrepo-com.svg" alt="">
-            <img src="images/icons/laravel-svgrepo-com.svg" alt="">
-            <img src="images/icons/typescript-svgrepo-com.svg" alt="">
+            <img src="images/icons/html5.svg" alt="">
+            <img src="images/icons/javascript-svgrepo-com.svg" alt="">
+            <img src="images/icons/tailwind-svgrepo-com.svg" alt="">
           </div>
         </div>
           </div>
-  
+  <!-- 4th Project -->
   <div class="project-content-card">
     <img src="images/projects/fourth-project.svg" alt="">
     <div class="project-card-info">
@@ -133,7 +138,7 @@
     <div class="project-technologies">
       <p class="technologies-title">Technologies used</p>
       <div class="technologies-used-icons">
-        <img src="images/icons/vue-svgrepo-com.svg" alt="">
+        <img src="images/icons/react.svg" alt="">
         <img src="images/icons/laravel-svgrepo-com.svg" alt="">
         <img src="images/icons/typescript-svgrepo-com.svg" alt="">
       </div>
@@ -141,6 +146,14 @@
       </div>
 </div>
     </main>
+    <article class="about">
+      <div class="section-title">
+        <p class="section-title-main">Who</p>
+        <span class="section-title-sub">Am I?</span>
+      </div>
+      <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae ab, laborum optio nesciunt maiores iure exercitationem sint corporis quo accusamus suscipit dolore. Quod ipsum ut commodi consectetur blanditiis perferendis doloremque dolorem reprehenderit dolor impedit temporibus ipsa aliquid, provident aut autem, distinctio, quae quidem necessitatibus! Placeat!</p>
+    <img src="images/AboutHero.gif" alt="">
+    </article>
 
     <script src="js/main.js"></script>
   </body>
