--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
         <p class="about-section-title-main">Who</p>
         <span class="about-section-title-sub">Am I</span>
       </div>
+      <div class="about-content">
       <p class="description">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae ab,
         laborum optio nesciunt maiores iure exercitationem sint corporis quo
@@ -158,6 +159,7 @@
         necessitatibus! Placeat!
       </p>
       <img src="images/AboutHero.gif" alt="" />
+    </div>
     </article>
 
     <script src="js/main.js"></script>
