--- a/index.html
+++ b/index.html
@@ -162,6 +162,23 @@
     </div>
     </article>
 
+    <div class="section-title">
+      <p class="section-title-main">Techn</p>
+      <span class="section-title-sub">ologies</span>
+    </div>
+
+    <div class="technologies-items">
+      <div class="tchnologies item"></div>
+      <div class="tchnologies item"></div>
+      <div class="tchnologies item"></div>
+      <div class="tchnologies item"></div>
+      <div class="tchnologies item"></div>
+      <div class="tchnologies item"></div>
+      <div class="tchnologies item"></div>
+      <div class="tchnologies item"></div>
+      <div class="tchnologies item"></div>
+    </div>
+
     <script src="js/main.js"></script>
   </body>
 </html>
