--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
     </div>
 
     <div class="technologies-items">
-      <div class="tchnologies item"></div>
-      <div class="tchnologies item"></div>
-      <div class="tchnologies item"></div>
-      <div class="tchnologies item"></div>
-      <div class="tchnologies item"></div>
+      <div class="tchnologies item"><img src="images/icons/webpack.svg" alt="webpack-icon"></div>
+      <div class="tchnologies item"><img src="images/icons/javascript-svgrepo-com.svg" alt="js-icon"></div>
+      <div class="tchnologies item"><img src="images/icons/vue-svgrepo-com.svg" alt="">vue-icon</div>
+      <div class="tchnologies item"><img src="images/icons/tailwind-svgrepo-com.svg" alt="tailwind-icon"></div>
+      <div class="tchnologies item"><img src="images/icons/typescript-svgrepo-com.svg" alt="">ts-icon</div>
       <div class="tchnologies item"></div>
       <div class="tchnologies item"></div>
       <div class="tchnologies item"></div>
