--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
       <div class="tchnologies-item"><img src="images/icons/vue-svgrepo-com.svg" alt="vue-icon"></div>
       <div class="tchnologies-item"><img src="images/icons/tailwind-svgrepo-com.svg" alt="tailwind-icon"></div>
       <div class="tchnologies-item"><img src="images/icons/typescript-svgrepo-com.svg" alt="ts-icon"></div>
-      <div class="tchnologies-item"></div>
-      <div class="tchnologies-item"></div>
-      <div class="tchnologies-item"></div>
-      <div class="tchnologies-item"></div>
+      <div class="tchnologies-item"><img src="images/icons/laravel-svgrepo-com.svg" alt=""></div>
+      <div class="tchnologies-item"><img src="images/icons/sass.svg" alt=""></div>
+      <div class="tchnologies-item"><img src="images/icons/html5.svg" alt=""></div>
+      <div class="tchnologies-item"><img src="images/icons/angular-svgrepo-com.svg" alt=""></div>
     </div>
 
     <script src="js/main.js"></script>
