--- a/index.html
+++ b/index.html
@@ -150,16 +150,16 @@
         <span class="about-section-title-sub">Am I</span>
       </div>
       <div class="about-content">
-      <p class="description">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae ab,
-        laborum optio nesciunt maiores iure exercitationem sint corporis quo
-        accusamus suscipit dolore. Quod ipsum ut commodi consectetur blanditiis
-        perferendis doloremque dolorem reprehenderit dolor impedit temporibus
-        ipsa aliquid, provident aut autem, distinctio, quae quidem
-        necessitatibus! Placeat!
-      </p>
-      <img src="images/AboutHero.gif" alt="" />
-    </div>
+        <p class="description">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae
+          ab, laborum optio nesciunt maiores iure exercitationem sint corporis
+          quo accusamus suscipit dolore. Quod ipsum ut commodi consectetur
+          blanditiis perferendis doloremque dolorem reprehenderit dolor impedit
+          temporibus ipsa aliquid, provident aut autem, distinctio, quae quidem
+          necessitatibus! Placeat!
+        </p>
+        <img src="images/AboutHero.gif" alt="" />
+      </div>
     </article>
 
     <div class="section-title">
@@ -168,15 +168,33 @@
     </div>
 
     <div class="technologies-items">
-      <div class="tchnologies-item"><img src="images/icons/webpack.svg" alt="webpack-icon"></div>
-      <div class="tchnologies-item"><img src="images/icons/javascript-svgrepo-com.svg" alt="js-icon"></div>
-      <div class="tchnologies-item"><img src="images/icons/vue-svgrepo-com.svg" alt="vue-icon"></div>
-      <div class="tchnologies-item"><img src="images/icons/tailwind-svgrepo-com.svg" alt="tailwind-icon"></div>
-      <div class="tchnologies-item"><img src="images/icons/typescript-svgrepo-com.svg" alt="ts-icon"></div>
-      <div class="tchnologies-item"><img src="images/icons/laravel-svgrepo-com.svg" alt=""></div>
-      <div class="tchnologies-item"><img src="images/icons/sass.svg" alt=""></div>
-      <div class="tchnologies-item"><img src="images/icons/html5.svg" alt=""></div>
-      <div class="tchnologies-item"><img src="images/icons/angular-svgrepo-com.svg" alt=""></div>
+      <div class="tchnologies-item">
+        <img src="images/icons/webpack.svg" alt="webpack-icon" />
+      </div>
+      <div class="tchnologies-item">
+        <img src="images/icons/javascript-svgrepo-com.svg" alt="js-icon" />
+      </div>
+      <div class="tchnologies-item">
+        <img src="images/icons/vue-svgrepo-com.svg" alt="vue-icon" />
+      </div>
+      <div class="tchnologies-item">
+        <img src="images/icons/tailwind-svgrepo-com.svg" alt="tailwind-icon" />
+      </div>
+      <div class="tchnologies-item">
+        <img src="images/icons/typescript-svgrepo-com.svg" alt="ts-icon" />
+      </div>
+      <div class="tchnologies-item">
+        <img src="images/icons/laravel-svgrepo-com.svg" alt="" />
+      </div>
+      <div class="tchnologies-item">
+        <img src="images/icons/sass.svg" alt="" />
+      </div>
+      <div class="tchnologies-item">
+        <img src="images/icons/html5.svg" alt="" />
+      </div>
+      <div class="tchnologies-item">
+        <img src="images/icons/angular-svgrepo-com.svg" alt="" />
+      </div>
     </div>
 
     <script src="js/main.js"></script>
