--- a/index.html
+++ b/index.html
@@ -197,6 +197,38 @@
       </div>
     </div>
 
+    <div class="contact-container">
+      <div class="section-contact-title">
+        <p class="section-title-main">Send me a</p>
+        <span class="section-title-sub">Message</span>
+      </div>
+
+      <section class="contact">
+        <img src="images/Mail.gif" alt="">
+<form class="contact-form">
+  
+  <div class="contact-form-field">
+  <label for="">Name</label>
+  <input type="text">
+ 
+</div>
+<div class="contact-form-field">
+  <label for="">Email</label>
+  <input type="text">
+ 
+</div>
+<div class="contact-form-field">
+  <label for="">Name</label>
+  <textarea name="" id="" cols="30" rows="10"></textarea>
+ 
+</div>
+
+<button>Send</button>
+</form>
+      </section>
+
+<
+    </div>
     <script src="js/main.js"></script>
   </body>
 </html>
