--- a/index.html
+++ b/index.html
@@ -204,30 +204,26 @@
       </div>
 
       <section class="contact">
-        <img src="images/Mail.gif" alt="">
-<form class="contact-form">
-  
-  <div class="contact-form-field">
-  <label for="">Name</label>
-  <input type="text">
- 
-</div>
-<div class="contact-form-field">
-  <label for="">Email</label>
-  <input type="text">
- 
-</div>
-<div class="contact-form-field">
-  <label for="">Name</label>
-  <textarea name="" id="" cols="30" rows="10"></textarea>
- 
-</div>
+        <img src="images/Mail.gif" alt="" />
+        <form class="contact-form">
+          <div class="contact-form-field">
+            <label for="">Name</label>
+            <input type="text" />
+          </div>
+          <div class="contact-form-field">
+            <label for="">Email</label>
+            <input type="text" />
+          </div>
+          <div class="contact-form-field">
+            <label for="">Name</label>
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+          </div>
 
-<button>Send</button>
-</form>
+          <button>Send</button>
+        </form>
       </section>
 
-<
+      <
     </div>
     <script src="js/main.js"></script>
   </body>
