--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         />
       </div>
       <ul class="menu active">
-        <li class="menu-link">Home</li>
-        <li class="menu-link">Projects</li>
-        <li class="menu-link">About</li>
-        <li class="menu-link">Contact</li>
+        <li data-key="home" class="menu-link">Home</li>
+        <li data-key="projects" class="menu-link">Projects</li>
+        <li data-key="about" class="menu-link">About</li>
+        <li data-key="contact" class="menu-link">Contact</li>
       </ul>
       <button class="burger active">
         <span></span>
