--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h1>Adam Huras</h1>
         <span>Frontend Developer</span>
         <div class="home-icons">
-          <img src="images/icons/GithubIcon.svg" alt="github-icon" />
+         <a href="https://github.com/HurasAdam"> <img src="images/icons/GithubIcon.svg" alt="github-icon" /></a>
         </div>
       </div>
 
