--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           temporibus ipsa aliquid, provident aut autem, distinctio, quae quidem
           necessitatibus! Placeat!
         </p>
-        <img src="images/AboutHero.gif" alt="" />
+        <img class="about-hero" src="images/AboutHero.gif" alt="" />
       </div>
     </article>
 
