--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         <h1>Adam Huras</h1>
         <span>Frontend Developer</span>
         <div class="home-icons">
-         <a href="https://github.com/HurasAdam"> <img src="images/icons/GithubIcon.svg" alt="github-icon" /></a>
+          <a href="https://github.com/HurasAdam">
+            <img src="images/icons/GithubIcon.svg" alt="github-icon"
+          /></a>
         </div>
       </div>
 
@@ -145,7 +147,6 @@
       </div>
     </main>
     <article class="about">
-      
       <div class="section-title">
         <p class="about-section-title-main">Who</p>
         <span class="about-section-title-sub">Am I</span>
