--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- Header -->
     <header>
-      <div class="logo">
+      <div class="logo" id="test" style="width: 100px;">
         <img
           src="images/vecteezy_ah-logo-monogram-with-pentagon-shape-style-design-template_.jpg"
           alt="website-logo"
